@@ -1,3 +1,7 @@
+2007-07-05  Raphaël Quinet  <raphael@gimp.org>
+
+	* plug-ins/common/psp.c: finished error handling cleanup.
+
 2007-07-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/psp.c: some cleanup to the error handling.
